Fixed Fullscreen on Firefox;\nFish swim away after wrong answer

--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ img{
     position: absolute;
     left: 1%;
     bottom: 1%;
-    width: 10%;
+    width: 5%;
     
     z-index: 1000;
 }
